Code reorganizations.  Added a Lib/ directory for more general libraries.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = Simulator Tools
+SUBDIRS = Include Lib Simulator Tools
 
 EXTRA_DIST = Makefile.extra README.Win32 README.autoconf README.running Thanks
 
