--- a/Makefile.in
+++ b/Makefile.in
@@ -71,12 +71,12 @@ PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
 VERSION = @VERSION@
 
-SUBDIRS = Simulator Tools
+SUBDIRS = Include Lib Simulator Tools
 
 EXTRA_DIST = Makefile.extra README.Win32 README.autoconf README.running Thanks
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
-CONFIG_HEADER = ./Simulator/Include/config.h
+CONFIG_HEADER = ./Include/config.h
 CONFIG_CLEAN_FILES = 
 DIST_COMMON =  README AUTHORS COPYING ChangeLog INSTALL Makefile.am \
 Makefile.in NEWS aclocal.m4 config.guess config.sub configure \
