--- a/FixObj/Makefile.in
+++ b/FixObj/Makefile.in
@@ -98,9 +98,9 @@ VERSION = @VERSION@
 
 bin_PROGRAMS = fixobj
 
-fixobj_SOURCES = main.c mat3.h obj.c obj.h MAT3vec.c
+fixobj_SOURCES = main.c obj.c obj.h
 
-fixobj_LDADD =
+fixobj_LDADD = $(top_builddir)/Lib/Math/libMath.la
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../Include/config.h
 CONFIG_CLEAN_FILES = 
@@ -115,8 +115,8 @@ X_CFLAGS = @X_CFLAGS@
 X_LIBS = @X_LIBS@
 X_EXTRA_LIBS = @X_EXTRA_LIBS@
 X_PRE_LIBS = @X_PRE_LIBS@
-fixobj_OBJECTS =  main.o obj.o MAT3vec.o
-fixobj_DEPENDENCIES = 
+fixobj_OBJECTS =  main.o obj.o
+fixobj_DEPENDENCIES =  $(top_builddir)/Lib/Math/libMath.la
 fixobj_LDFLAGS = 
 CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
@@ -129,7 +129,7 @@ DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
 TAR = tar
 GZIP = --best
-DEP_FILES =  .deps/MAT3vec.P .deps/main.P .deps/obj.P
+DEP_FILES =  .deps/main.P .deps/obj.P
 SOURCES = $(fixobj_SOURCES)
 OBJECTS = $(fixobj_OBJECTS)
 
@@ -339,10 +339,13 @@ clean-generic maintainer-clean-generic clean mostlyclean distclean \
 maintainer-clean
 
 
-INCLUDES += -I$(top_builddir)
+INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.3  1998/04/18 04:01:02  curt
+# Now use libMath rather than having local copies of math routines.
+#
 # Revision 1.2  1998/04/14 02:26:05  curt
 # Code reorganizations.  Added a Lib/ directory for more general libraries.
 #
