--- a/SplitTris/Makefile.in
+++ b/SplitTris/Makefile.in
@@ -98,15 +98,11 @@ VERSION = @VERSION@
 
 bin_PROGRAMS = splittris
 
-splittris_SOURCES = \
-	MAT3vec.c \
-	fg_geodesy.c fg_geodesy.h \
-	mat3.h \
-	polar.c polar.h \
-	splittris.c splittris.h
+splittris_SOURCES = splittris.c splittris.h
 
 splittris_LDADD = \
-	$(top_builddir)/Lib/Bucket/libBucket.la
+	$(top_builddir)/Lib/Bucket/libBucket.la \
+	$(top_builddir)/Lib/Math/libMath.la
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../Include/config.h
 CONFIG_CLEAN_FILES = 
@@ -121,8 +117,9 @@ X_CFLAGS = @X_CFLAGS@
 X_LIBS = @X_LIBS@
 X_EXTRA_LIBS = @X_EXTRA_LIBS@
 X_PRE_LIBS = @X_PRE_LIBS@
-splittris_OBJECTS =  MAT3vec.o fg_geodesy.o polar.o splittris.o
-splittris_DEPENDENCIES =  $(top_builddir)/Lib/Bucket/libBucket.la
+splittris_OBJECTS =  splittris.o
+splittris_DEPENDENCIES =  $(top_builddir)/Lib/Bucket/libBucket.la \
+$(top_builddir)/Lib/Math/libMath.la
 splittris_LDFLAGS = 
 CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
@@ -135,8 +132,7 @@ DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
 TAR = tar
 GZIP = --best
-DEP_FILES =  .deps/MAT3vec.P .deps/fg_geodesy.P .deps/polar.P \
-.deps/splittris.P
+DEP_FILES =  .deps/splittris.P
 SOURCES = $(splittris_SOURCES)
 OBJECTS = $(splittris_OBJECTS)
 
@@ -350,7 +346,10 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.2  1998/04/14 02:26:07  curt
+# Revision 1.3  1998/04/18 04:01:17  curt
+# Now use libMath rather than having local copies of math routines.
+#
+# Revision 1.2  1998/04/14 02:26:06  curt
 # Code reorganizations.  Added a Lib/ directory for more general libraries.
 #
 # Revision 1.1  1998/04/08 23:21:10  curt
