--- a/Tri2obj/Makefile.in
+++ b/Tri2obj/Makefile.in
@@ -98,15 +98,11 @@ VERSION = @VERSION@
 
 bin_PROGRAMS = tri2obj
 
-tri2obj_SOURCES = \
-	tri2obj.c tri2obj.h \
-	MAT3vec.c \
-	fg_geodesy.c fg_geodesy.h \
-	mat3.h \
-	polar.c polar.h
+tri2obj_SOURCES = tri2obj.c tri2obj.h
 
 tri2obj_LDADD = \
-	$(top_builddir)/Lib/Bucket/libBucket.la
+	$(top_builddir)/Lib/Bucket/libBucket.la \
+	$(top_builddir)/Lib/Math/libMath.la
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../Include/config.h
 CONFIG_CLEAN_FILES = 
@@ -121,8 +117,9 @@ X_CFLAGS = @X_CFLAGS@
 X_LIBS = @X_LIBS@
 X_EXTRA_LIBS = @X_EXTRA_LIBS@
 X_PRE_LIBS = @X_PRE_LIBS@
-tri2obj_OBJECTS =  tri2obj.o MAT3vec.o fg_geodesy.o polar.o
-tri2obj_DEPENDENCIES =  $(top_builddir)/Lib/Bucket/libBucket.la
+tri2obj_OBJECTS =  tri2obj.o
+tri2obj_DEPENDENCIES =  $(top_builddir)/Lib/Bucket/libBucket.la \
+$(top_builddir)/Lib/Math/libMath.la
 tri2obj_LDFLAGS = 
 CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
@@ -135,8 +132,7 @@ DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
 TAR = tar
 GZIP = --best
-DEP_FILES =  .deps/MAT3vec.P .deps/fg_geodesy.P .deps/polar.P \
-.deps/tri2obj.P
+DEP_FILES =  .deps/tri2obj.P
 SOURCES = $(tri2obj_SOURCES)
 OBJECTS = $(tri2obj_OBJECTS)
 
@@ -350,7 +346,10 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.2  1998/04/14 02:26:10  curt
+# Revision 1.3  1998/04/18 04:01:29  curt
+# Now use libMath rather than having local copies of math routines.
+#
+# Revision 1.2  1998/04/14 02:26:09  curt
 # Code reorganizations.  Added a Lib/ directory for more general libraries.
 #
 # Revision 1.1  1998/04/08 23:22:13  curt
