--- a/AssemTris/Makefile.in
+++ b/AssemTris/Makefile.in
@@ -344,7 +344,10 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.2  1998/04/14 02:26:00  curt
+# Revision 1.3  1998/04/18 04:02:48  curt
+# Added zlib support in placed and other misc. tweaks.
+#
+# Revision 1.2  1998/04/14 02:25:59  curt
 # Code reorganizations.  Added a Lib/ directory for more general libraries.
 #
 # Revision 1.1  1998/04/08 22:54:57  curt
