Moved fg_debug.c to it's own library.

--- a/Autopilot/Makefile.am
+++ b/Autopilot/Makefile.am
@@ -4,4 +4,4 @@ lib_LTLIBRARIES = libAutopilot.la
 
 libAutopilot_la_SOURCES = autopilot.c autopilot.h
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/Simulator
+INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
