--- a/FDM/Makefile.am
+++ b/FDM/Makefile.am
@@ -6,4 +6,4 @@ lib_LTLIBRARIES = libFlight.la
 
 libFlight_la_SOURCES = flight.c flight.h
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/Simulator
+INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
