--- a/Joystick/Makefile.am
+++ b/Joystick/Makefile.am
@@ -4,4 +4,4 @@ lib_LTLIBRARIES = libJoystick.la
 
 libJoystick_la_SOURCES = joystick.c joystick.h
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/Simulator
+INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
