--- a/Weather/Makefile.am
+++ b/Weather/Makefile.am
@@ -4,4 +4,4 @@ lib_LTLIBRARIES = libWeather.la
 
 libWeather_la_SOURCES = weather.c weather.h
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/Simulator
+INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
