--- a/Math/Makefile.in
+++ b/Math/Makefile.in
@@ -80,6 +80,7 @@ libMath_la_SOURCES = \
 	MAT3vec.c \
 	fg_geodesy.c fg_geodesy.h \
 	fg_random.c fg_random.h \
+	interpolater.c interpolater.h \
 	mat3.h mat3defs.h mat3err.h \
 	polar.c polar.h \
 	vector.c vector.h
@@ -100,7 +101,7 @@ X_PRE_LIBS = @X_PRE_LIBS@
 libMath_la_LDFLAGS = 
 libMath_la_LIBADD = 
 libMath_la_OBJECTS =  MAT3geom.lo MAT3inv.lo MAT3mat.lo MAT3vec.lo \
-fg_geodesy.lo fg_random.lo polar.lo vector.lo
+fg_geodesy.lo fg_random.lo interpolater.lo polar.lo vector.lo
 CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
@@ -113,8 +114,8 @@ DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 TAR = tar
 GZIP = --best
 DEP_FILES =  .deps/MAT3geom.P .deps/MAT3inv.P .deps/MAT3mat.P \
-.deps/MAT3vec.P .deps/fg_geodesy.P .deps/fg_random.P .deps/polar.P \
-.deps/vector.P
+.deps/MAT3vec.P .deps/fg_geodesy.P .deps/fg_random.P \
+.deps/interpolater.P .deps/polar.P .deps/vector.P
 SOURCES = $(libMath_la_SOURCES)
 OBJECTS = $(libMath_la_OBJECTS)
 
