C++ - ifing the code a bit.

--- a/Astro/Makefile.am
+++ b/Astro/Makefile.am
@@ -2,11 +2,11 @@ libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libAstro.la
 libAstro_la_SOURCES = \
-	moon.c moon.h \
-	orbits.c orbits.h \
-	planets.c planets.h \
-	sky.c sky.h \
-	stars.c stars.h \
-	sun.c sun.h
+	moon.cxx moon.hxx \
+	orbits.cxx orbits.hxx \
+	planets.cxx planets.hxx \
+	sky.cxx sky.hxx \
+	stars.cxx stars.hxx \
+	sun.cxx sun.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
