Added zlib support.

--- a/DemRaw2ascii/Makefile.in
+++ b/DemRaw2ascii/Makefile.in
@@ -98,7 +98,7 @@ VERSION = @VERSION@
 
 bin_PROGRAMS = raw2ascii
 
-raw2ascii_SOURCES = main.c rawdem.c
+raw2ascii_SOURCES = main.c rawdem.c rawdem.h
 
 raw2ascii_LDADD = 
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -343,7 +343,10 @@ INCLUDES +=
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.1  1998/04/18 03:59:45  curt
+# Revision 1.2  1998/04/24 00:44:04  curt
+# Added zlib support.
+#
+# Revision 1.1  1998/04/18 03:59:44  curt
 # Incorporated into gnu automake/autoconf system.
 #
 
