--- a/FixObj/Makefile.in
+++ b/FixObj/Makefile.in
@@ -100,7 +100,10 @@ bin_PROGRAMS = fixobj
 
 fixobj_SOURCES = main.c obj.c obj.h
 
-fixobj_LDADD = $(top_builddir)/Lib/Math/libMath.la
+fixobj_LDADD = \
+	$(top_builddir)/Lib/Math/libMath.la \
+	$(top_builddir)/Lib/Debug/libDebug.la \
+	$(top_builddir)/Lib/zlib/libz.la
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../Include/config.h
 CONFIG_CLEAN_FILES = 
@@ -116,7 +119,8 @@ X_LIBS = @X_LIBS@
 X_EXTRA_LIBS = @X_EXTRA_LIBS@
 X_PRE_LIBS = @X_PRE_LIBS@
 fixobj_OBJECTS =  main.o obj.o
-fixobj_DEPENDENCIES =  $(top_builddir)/Lib/Math/libMath.la
+fixobj_DEPENDENCIES =  $(top_builddir)/Lib/Math/libMath.la \
+$(top_builddir)/Lib/Debug/libDebug.la $(top_builddir)/Lib/zlib/libz.la
 fixobj_LDFLAGS = 
 CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
@@ -343,6 +347,9 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.4  1998/04/24 00:44:05  curt
+# Added zlib support.
+#
 # Revision 1.3  1998/04/18 04:01:02  curt
 # Now use libMath rather than having local copies of math routines.
 #
