--- a/SplitTris/Makefile.am
+++ b/SplitTris/Makefile.am
@@ -30,13 +30,18 @@ splittris_SOURCES = splittris.c splittris.h
 
 splittris_LDADD = \
 	$(top_builddir)/Lib/Bucket/libBucket.la \
-	$(top_builddir)/Lib/Math/libMath.la
+	$(top_builddir)/Lib/Math/libMath.la \
+        $(top_builddir)/Lib/Debug/libDebug.la \
+        $(top_builddir)/Lib/zlib/libz.la
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.4  1998/04/24 00:44:06  curt
+# Added zlib support.
+#
 # Revision 1.3  1998/04/18 04:01:17  curt
 # Now use libMath rather than having local copies of math routines.
 #
