--- a/Tri2obj/Makefile.in
+++ b/Tri2obj/Makefile.in
@@ -102,7 +102,9 @@ tri2obj_SOURCES = tri2obj.c tri2obj.h
 
 tri2obj_LDADD = \
 	$(top_builddir)/Lib/Bucket/libBucket.la \
-	$(top_builddir)/Lib/Math/libMath.la
+	$(top_builddir)/Lib/Math/libMath.la \
+        $(top_builddir)/Lib/Debug/libDebug.la \
+        $(top_builddir)/Lib/zlib/libz.la
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../Include/config.h
 CONFIG_CLEAN_FILES = 
@@ -119,7 +121,8 @@ X_EXTRA_LIBS = @X_EXTRA_LIBS@
 X_PRE_LIBS = @X_PRE_LIBS@
 tri2obj_OBJECTS =  tri2obj.o
 tri2obj_DEPENDENCIES =  $(top_builddir)/Lib/Bucket/libBucket.la \
-$(top_builddir)/Lib/Math/libMath.la
+$(top_builddir)/Lib/Math/libMath.la \
+$(top_builddir)/Lib/Debug/libDebug.la $(top_builddir)/Lib/zlib/libz.la
 tri2obj_LDFLAGS = 
 CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
@@ -346,6 +349,9 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.4  1998/04/24 00:44:07  curt
+# Added zlib support.
+#
 # Revision 1.3  1998/04/18 04:01:29  curt
 # Now use libMath rather than having local copies of math routines.
 #
