--- a/FixNode/Makefile.in
+++ b/FixNode/Makefile.in
@@ -371,6 +371,9 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.4  1998/04/24 00:44:04  curt
+# Added zlib support.
+#
 # Revision 1.3  1998/04/18 04:02:54  curt
 # Added zlib support in placed and other misc. tweaks.
 #
