C++-ifing the code a bit.

--- a/Cockpit/Makefile.am
+++ b/Cockpit/Makefile.am
@@ -2,7 +2,7 @@ libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libCockpit.la
 libCockpit_la_SOURCES = \
-	cockpit.c cockpit.h \
-	hud.c hud.h
+	cockpit.cxx cockpit.hxx \
+	hud.cxx hud.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
