Wrapped "#include <config.h>" in "#ifdef HAVE_CONFIG_H" Fog color fixes. Separated out lighting calcs into their own file.

--- a/Time/Makefile.am
+++ b/Time/Makefile.am
@@ -3,9 +3,9 @@ libdir	= ${exec_prefix}/lib
 lib_LTLIBRARIES = libTime.la
 
 libTime_la_SOURCES = \
-	event.c event.h \
-	fg_time.c fg_time.h \
-	fg_timer.c fg_timer.h \
+	event.cxx event.hxx \
+	fg_time.cxx fg_time.hxx \
+	fg_timer.cxx fg_timer.hxx \
 	light.cxx light.hxx \
 	sunpos.cxx sunpos.hxx
 
